Fix assertion failure in a case that the dirty flag of a textarea element is changed https://bugs.webkit.org/show_bug.cgi?id=45681

Reviewed by Alexey Proskuryakov.

WebCore:

We need to call setNeedsValidityCheck() after updating m_isDirty.

Test: fast/forms/textarea-checkValidity-crash.html

* html/HTMLTextAreaElement.cpp:
(WebCore::HTMLTextAreaElement::setValue):
(WebCore::HTMLTextAreaElement::setNonDirtyValue):
(WebCore::HTMLTextAreaElement::setValueCommon):
* html/HTMLTextAreaElement.h:

LayoutTests:

* fast/forms/textarea-checkValidity-crash-expected.txt: Added.
* fast/forms/textarea-checkValidity-crash.html: Added.

Canonical link: https://commits.webkit.org/59181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68494 268f45cc-cd09-0410-ab3c-d52691b4dbfc